enhance all presets to 100% completion